Revert "Merge branch 'main' of https://github.com/dannygardner26/kidsinmotion-website"
This reverts commit 29e0d28f845a033600587749de42b441f72dca6e, reversing
changes made to 52b0bdc3fc60573df6aadce491db4baa376c4cb1.